feat: add project

--- a/src/index.html
+++ b/src/index.html
@@ -131,6 +131,19 @@
                             </h3>
                         </a>
                     </li>
+                    <li class="projects__item">
+                      <a href="https://rolling-scopes-school.github.io/mercartem-JSFE2022Q3/gem-puzzle/dist/">
+                          <img class="projects__img" src="./img/gem.png" alt="gem" width="270" height="150">
+                          <h3 class="projects__title">
+                              Gem puzzle
+                              <div class="projects__icon">
+                                  <img src="./img/css.png" alt="css" width="30" height="30">
+                                  <img src="./img/js.png" alt="js" width="30" height="30">
+                                  <img src="./img/spa.png" alt="html" width="30" height="30">
+                              </div>
+                          </h3>
+                      </a>
+                  </li>
                 </ul>
             </div>
             <div class="info__educations">
