feat: add project

--- a/src/index.html
+++ b/src/index.html
@@ -46,8 +46,8 @@
                         <input type="range" max="10" value="9">
                         <input type="range" max="10" value="6">
                         <input type="range" max="10" value="6">
-                        <input type="range" max="10" value="1">
-                        <input type="range" max="10" value="1">
+                        <input type="range" max="10" value="5">
+                        <input type="range" max="10" value="4">
                         <input type="range" max="10" value="1">
                         <input type="range" max="10" value="3">
                     </div>
@@ -85,6 +85,7 @@
                 <h2 class="title">EXPIRIENCE</h2>
                 <ul>
                     <li class="info__job">Purchasing Manager <span>2018 - 2022</span></li>
+                    <li class="info__job">Online Teaching Assistant for Web Development <span>2022 - present</span></li>
                     <li class="info__job">Junior Front-End Developer <span>2022 - present</span></li>
                 </ul>
             </div>
@@ -93,57 +94,70 @@
                 <ul class="projects">
                     <li class="projects__item">
                         <a href="https://rolling-scopes-school.github.io/mercartem-JSFEPRESCHOOL2022Q2/momentum/">
-                            <img class="projects__img" src="./img/Momentum-a.png" alt="momentum" width="270" height="150">
+                            <img class="projects__img" src="./img/Momentum-a.png" alt="momentum" width="180" height="100">
                             <h3 class="projects__title">
                                 Momentum
                                 <div class="projects__icon">
-                                    <img src="./img/html.png" alt="html" width="30" height="30">
-                                    <img src="./img/css.png" alt="css" width="30" height="30">
-                                    <img src="./img/js.png" alt="js" width="30" height="30">
-                                    <img src="./img/api.png" alt="api" width="30" height="30">
+                                    <img src="./img/html.png" alt="html" width="13" height="13">
+                                    <img src="./img/css.png" alt="css" width="13" height="13">
+                                    <img src="./img/js.png" alt="js" width="13" height="13">
+                                    <img src="./img/api.png" alt="api" width="13" height="13">
                                 </div>
                             </h3>
                         </a>
                     </li>
                     <li class="projects__item">
                         <a href="https://rolling-scopes-school.github.io/mercartem-JSFEPRESCHOOL2022Q2/travel/">
-                            <img class="projects__img" src="./img/Travel-l.png" alt="travel" width="270" height="150">
+                            <img class="projects__img" src="./img/Travel-l.png" alt="travel" width="180" height="100">
                             <h3 class="projects__title">
                                 Travel
                                 <div class="projects__icon">
-                                    <img src="./img/html.png" alt="html" width="30" height="30">
-                                    <img src="./img/css.png" alt="css" width="30" height="30">
-                                    <img src="./img/js.png" alt="js" width="30" height="30">
+                                    <img src="./img/html.png" alt="html" width="13" height="13">
+                                    <img src="./img/css.png" alt="css" width="13" height="13">
+                                    <img src="./img/js.png" alt="js" width="13" height="13">
                                 </div>
                             </h3>
                         </a>
                     </li>
                     <li class="projects__item">
                         <a href="https://rolling-scopes-school.github.io/mercartem-JSFE2022Q3/online-zoo/pages/main/">
-                            <img class="projects__img" src="./img/zoo-l.png" alt="travel" width="270" height="150">
+                            <img class="projects__img" src="./img/zoo-l.png" alt="travel" width="180" height="100">
                             <h3 class="projects__title">
                                 Online-Zoo
                                 <div class="projects__icon">
-                                    <img src="./img/html.png" alt="html" width="30" height="30">
-                                    <img src="./img/css.png" alt="css" width="30" height="30">
-                                    <img src="./img/js.png" alt="js" width="30" height="30">
+                                    <img src="./img/html.png" alt="html" width="13" height="13">
+                                    <img src="./img/css.png" alt="css" width="13" height="13">
+                                    <img src="./img/js.png" alt="js" width="13" height="13">
                                 </div>
                             </h3>
                         </a>
                     </li>
                     <li class="projects__item">
                       <a href="https://rolling-scopes-school.github.io/mercartem-JSFE2022Q3/gem-puzzle/dist/">
-                          <img class="projects__img" src="./img/gem.png" alt="gem" width="270" height="150">
+                          <img class="projects__img" src="./img/gem.png" alt="gem" width="180" height="100">
                           <h3 class="projects__title">
                               Gem puzzle
                               <div class="projects__icon">
-                                  <img src="./img/css.png" alt="css" width="30" height="30">
-                                  <img src="./img/js.png" alt="js" width="30" height="30">
-                                  <img src="./img/spa.png" alt="html" width="30" height="30">
+                                  <img src="./img/css.png" alt="css" width="13" height="13">
+                                  <img src="./img/js.png" alt="js" width="13" height="13">
+                                  <img src="./img/spa.png" alt="html" width="13" height="13">
                               </div>
                           </h3>
                       </a>
                   </li>
+                  <li class="projects__item">
+                    <a href="https://rolling-scopes-school.github.io/mercartem-JSFE2022Q3/songbird/dist/">
+                        <img class="projects__img" src="./img/songbird.png" alt="songbird" width="180" height="100">
+                        <h3 class="projects__title">
+                            Songbird
+                            <div class="projects__icon">
+                                <img src="./img/html.png" alt="html" width="13" height="13">
+                                <img src="./img/css.png" alt="css" width="13" height="13">
+                                <img src="./img/js.png" alt="js" width="13" height="13">
+                            </div>
+                        </h3>
+                    </a>
+                </li>
                 </ul>
             </div>
             <div class="info__educations">
